@@ -1,7 +1,7 @@
 /*
  * Copyright (c) 2013, 2014 Alexandru Copot <alex.mihai.c@gmail.com>, with support from IXIA.
  * Copyright (c) 2013, 2014 Daniel Baluta <dbaluta@ixiacom.com>
- * Copyright (c) 2014, 2015 Nicira, Inc.
+ * Copyright (c) 2014, 2015, 2016 Nicira, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,17 +41,22 @@
 VLOG_DEFINE_THIS_MODULE(bundles);
 
 static struct ofp_bundle *
-ofp_bundle_create(uint32_t id, uint16_t flags)
+ofp_bundle_create(uint32_t id, uint16_t flags, const struct ofp_header *oh)
 {
     struct ofp_bundle *bundle;
 
     bundle = xmalloc(sizeof(*bundle));
 
+    bundle->used = time_msec();
     bundle->id = id;
     bundle->flags = flags;
     bundle->state = BS_OPEN;
 
     ovs_list_init(&bundle->msg_list);
+
+    /* Max 64 bytes for error reporting. */
+    memcpy(bundle->ofp_msg_data, oh,
+           MIN(ntohs(oh->length), sizeof bundle->ofp_msg_data));
 
     return bundle;
 }
@@ -75,7 +80,8 @@ ofp_bundle_remove__(struct ofconn *ofconn, struct ofp_bundle *bundle,
 }
 
 enum ofperr
-ofp_bundle_open(struct ofconn *ofconn, uint32_t id, uint16_t flags)
+ofp_bundle_open(struct ofconn *ofconn, uint32_t id, uint16_t flags,
+                const struct ofp_header *oh)
 {
     struct ofp_bundle *bundle;
     enum ofperr error;
@@ -89,7 +95,7 @@ ofp_bundle_open(struct ofconn *ofconn, uint32_t id, uint16_t flags)
         return OFPERR_OFPBFC_BAD_ID;
     }
 
-    bundle = ofp_bundle_create(id, flags);
+    bundle = ofp_bundle_create(id, flags, oh);
     error = ofconn_insert_bundle(ofconn, bundle);
     if (error) {
         free(bundle);
@@ -119,6 +125,7 @@ ofp_bundle_close(struct ofconn *ofconn, uint32_t id, uint16_t flags)
         return OFPERR_OFPBFC_BAD_FLAGS;
     }
 
+    bundle->used = time_msec();
     bundle->state = BS_CLOSED;
     return 0;
 }
@@ -141,7 +148,8 @@ ofp_bundle_discard(struct ofconn *ofconn, uint32_t id)
 
 enum ofperr
 ofp_bundle_add_message(struct ofconn *ofconn, uint32_t id, uint16_t flags,
-                       struct ofp_bundle_entry *bmsg)
+                       struct ofp_bundle_entry *bmsg,
+                       const struct ofp_header *oh)
 {
     struct ofp_bundle *bundle;
 
@@ -150,7 +158,7 @@ ofp_bundle_add_message(struct ofconn *ofconn, uint32_t id, uint16_t flags,
     if (!bundle) {
         enum ofperr error;
 
-        bundle = ofp_bundle_create(id, flags);
+        bundle = ofp_bundle_create(id, flags, oh);
         error = ofconn_insert_bundle(ofconn, bundle);
         if (error) {
             free(bundle);
@@ -164,6 +172,7 @@ ofp_bundle_add_message(struct ofconn *ofconn, uint32_t id, uint16_t flags,
         return OFPERR_OFPBFC_BAD_FLAGS;
     }
 
+    bundle->used = time_msec();
     ovs_list_push_back(&bundle->msg_list, &bmsg->node);
     return 0;
 }
